<resources>
    <string name="app_name">Cypto rating</string>
    <string name="link_get_logo_crypto">https://s2.coinmarketcap.com/static/img/coins/64x64/</string>
    <string name="png_format">.png</string>
    <string name="link_crypto_trend">https://s3.coinmarketcap.com/generated/sparklines/web/7d/usd/</string>
    <string name="rank">Rank</string>
    <string name="date_added">Date added</string>
    <string name="max_supply">Max supply</string>
    <string name="circulating_supply">Circulating supply</string>
    <string name="total_supply">Total supply</string>
    <string name="Last_updated">Last updated</string>
    <string name="quote_symbol">Quote symbol</string>
    <string name="price">Price</string>
    <string name="volume_24h">Volume 24h</string>
    <string name="percent_change_1h">Percent change 1h</string>
    <string name="percent_change_24h">Percent change 24h</string>
    <string name="percent_change_7d">Percent change 7d</string>
    <string name="percent_change_30d">Percent change 30d</string>
    <string name="percent_change_60d">Percent change 60d</string>
    <string name="percent_change_90d">Percent change 90d</string>
    <string name="market_cap">Market cap</string>
    <string name="top_100">Top 100</string>
    <string name="search">search</string>
    <string name="favorite">Favorite</string>
    <string name="add_quote">add quote</string>
    <array name="list_currency_code">
        <item>UAH</item>
        <item>USD</item>
        <item>EUR</item>
        <item>GBP</item>
        <item>JPY</item>
        <item>CHF</item>
        <item>CNY</item>
        <item>RUB</item>
        <item>AED</item>
        <item>AFN</item>
        <item>ALL</item>
        <item>AMD</item>
        <item>AOA</item>
        <item>ARS</item>
        <item>AUD</item>
        <item>AZN</item>
        <item>BDT</item>
        <item>BGN</item>
        <item>BHD</item>
        <item>BIF</item>
        <item>BND</item>
        <item>BOB</item>
        <item>BRL</item>
        <item>BWP</item>
        <item>BYN</item>
        <item>CAD</item>
        <item>CDF</item>
        <item>CLP</item>
        <item>COP</item>
        <item>CRC</item>
        <item>CUP</item>
        <item>CZK</item>
        <item>DJF</item>
        <item>DKK</item>
        <item>DZD</item>
        <item>EGP</item>
        <item>ETB</item>
        <item>GEL</item>
        <item>GHS</item>
        <item>GMD</item>
        <item>GNF</item>
        <item>HKD</item>
        <item>HRK</item>
        <item>HUF</item>
        <item>IDR</item>
        <item>ILS</item>
        <item>INR</item>
        <item>IQD</item>
        <item>IRR</item>
        <item>ISK</item>
        <item>JOD</item>
        <item>KES</item>
        <item>KGS</item>
        <item>KHR</item>
        <item>KPW</item>
        <item>KRW</item>
        <item>KWD</item>
        <item>KZT</item>
        <item>LAK</item>
        <item>LBP</item>
        <item>LKR</item>
        <item>LYD</item>
        <item>MAD</item>
        <item>MDL</item>
        <item>MGA</item>
        <item>MKD</item>
        <item>MNT</item>
        <item>MRO</item>
        <item>MUR</item>
        <item>MVR</item>
        <item>MWK</item>
        <item>MXN</item>
        <item>MYR</item>
        <item>MZN</item>
        <item>NAD</item>
        <item>NGN</item>
        <item>NIO</item>
        <item>NOK</item>
        <item>NPR</item>
        <item>NZD</item>
        <item>OMR</item>
        <item>PEN</item>
        <item>PHP</item>
        <item>PKR</item>
        <item>PLN</item>
        <item>PYG</item>
        <item>QAR</item>
        <item>RON</item>
        <item>RSD</item>
        <item>SAR</item>
        <item>SCR</item>
        <item>SDG</item>
        <item>SEK</item>
        <item>SGD</item>
        <item>SLL</item>
        <item>SOS</item>
        <item>SRD</item>
        <item>SYP</item>
        <item>SZL</item>
        <item>THB</item>
        <item>TJS</item>
        <item>TMT</item>
        <item>TND</item>
        <item>TRY</item>
        <item>TWD</item>
        <item>TZS</item>
        <item>UGX</item>
        <item>UYU</item>
        <item>UZS</item>
        <item>VEF</item>
        <item>VND</item>
        <item>XAF</item>
        <item>XDR</item>
        <item>XOF</item>
        <item>YER</item>
        <item>ZAR</item>
        <item>ZMK</item>
    </array>
</resources>
