<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginLeft="16dp"
    android:layout_marginRight="16dp"
    android:layout_marginBottom="16dp"
    android:elevation="4dp">

    <TextView
        android:id="@+id/quote_name"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:text="@string/quote_symbol"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/price_text"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="7dp"
        android:text="@string/price"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/quote_name" />

    <TextView
        android:id="@+id/price"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        app:layout_constraintStart_toEndOf="@id/price_text"
        app:layout_constraintTop_toTopOf="@id/price_text"
        tools:text="Quote symbol" />

    <TextView
        android:id="@+id/volume_24h_text"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="7dp"
        android:text="@string/volume_24h"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/price_text" />

    <TextView
        android:id="@+id/volume_24h"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        app:layout_constraintStart_toEndOf="@id/volume_24h_text"
        app:layout_constraintTop_toTopOf="@id/volume_24h_text"
        tools:text="Quote symbol" />

    <TextView
        android:id="@+id/percent_change_1h_text"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="7dp"
        android:text="@string/percent_change_1h"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/volume_24h_text" />

    <TextView
        android:id="@+id/percent_change_1h"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        app:layout_constraintStart_toEndOf="@id/percent_change_1h_text"
        app:layout_constraintTop_toTopOf="@id/percent_change_1h_text"
        tools:text="Quote symbol" />

    <TextView
        android:id="@+id/percent_change_24h_text"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="7dp"
        android:text="@string/percent_change_24h"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/percent_change_1h_text" />

    <TextView
        android:id="@+id/percent_change_24h"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        app:layout_constraintStart_toEndOf="@id/percent_change_24h_text"
        app:layout_constraintTop_toTopOf="@id/percent_change_24h_text"
        tools:text="Quote symbol" />

    <TextView
        android:id="@+id/percent_change_7d_text"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="7dp"
        android:text="@string/percent_change_7d"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/percent_change_24h_text" />

    <TextView
        android:id="@+id/percent_change_7d"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        app:layout_constraintStart_toEndOf="@id/percent_change_7d_text"
        app:layout_constraintTop_toTopOf="@id/percent_change_7d_text"
        tools:text="Quote symbol" />

    <TextView
        android:id="@+id/percent_change_30d_text"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="7dp"
        android:text="@string/percent_change_30d"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/percent_change_7d_text" />

    <TextView
        android:id="@+id/percent_change_30d"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        app:layout_constraintStart_toEndOf="@id/percent_change_30d_text"
        app:layout_constraintTop_toTopOf="@id/percent_change_30d_text"
        tools:text="Quote symbol" />


    <TextView
        android:id="@+id/percent_change_60d_text"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="7dp"
        android:text="@string/percent_change_60d"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/percent_change_30d_text" />

    <TextView
        android:id="@+id/percent_change_60d"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        app:layout_constraintStart_toEndOf="@id/percent_change_60d_text"
        app:layout_constraintTop_toTopOf="@id/percent_change_60d_text"
        tools:text="Quote symbol" />

    <TextView
        android:id="@+id/percent_change_90d_text"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="7dp"
        android:text="@string/percent_change_90d"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/percent_change_60d_text" />

    <TextView
        android:id="@+id/percent_change_90d"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        app:layout_constraintStart_toEndOf="@id/percent_change_90d_text"
        app:layout_constraintTop_toTopOf="@id/percent_change_90d_text"
        tools:text="Quote symbol" />

    <TextView
        android:id="@+id/market_cap_text"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="7dp"
        android:text="@string/market_cap"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/percent_change_90d_text" />

    <TextView
        android:id="@+id/market_cap"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        app:layout_constraintStart_toEndOf="@id/market_cap_text"
        app:layout_constraintTop_toTopOf="@id/market_cap_text"
        tools:text="Quote symbol" />

    <TextView
        android:id="@+id/last_updated_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="7dp"
        android:text="@string/Last_updated"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/market_cap_text" />

    <TextView
        android:id="@+id/last_updated"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/standard_margin"
        android:textSize="16sp"
        app:layout_constraintStart_toEndOf="@id/last_updated_text"
        app:layout_constraintTop_toTopOf="@id/last_updated_text"
        tools:text="Quote symbol" />

</androidx.constraintlayout.widget.ConstraintLayout>