<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/grey">

    <ImageView
        android:id="@+id/image_crypto"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginStart="16dp"
        app:layout_constraintTop_toTopOf="@id/crypto_symbol"
        app:layout_constraintBottom_toTopOf="@+id/crypto_rank_text"
        app:layout_constraintStart_toStartOf="parent"
         />

    <TextView
        android:id="@+id/crypto_symbol"

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="50dp"
        android:textSize="24sp"
        app:layout_constraintStart_toEndOf="@id/image_crypto"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="CryptoName" />

    <TextView
        android:id="@+id/crypto_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="@+id/image_crypto"
        app:layout_constraintStart_toEndOf="@id/image_crypto"
        app:layout_constraintTop_toBottomOf="@id/crypto_symbol"
        tools:text="Symbol" />

    <TextView
        android:id="@+id/crypto_rank_text"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginVertical="7dp"
        android:layout_marginTop="16dp"
        android:text="@string/rank"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="@id/image_crypto"
        app:layout_constraintTop_toBottomOf="@id/image_crypto" />

    <TextView
        android:id="@+id/crypto_rank"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="@+id/crypto_rank_text"
        app:layout_constraintStart_toEndOf="@+id/crypto_rank_text"
        tools:text="1" />

    <TextView
        android:id="@+id/max_supply_text"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginVertical="7dp"
        android:text="@string/max_supply"
        app:layout_constraintStart_toStartOf="@+id/crypto_rank_text"
        app:layout_constraintTop_toBottomOf="@+id/crypto_rank_text" />

    <TextView
        android:id="@+id/max_supply"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="@+id/max_supply_text"
        app:layout_constraintStart_toEndOf="@+id/max_supply_text"
        tools:text="21000000" />

    <TextView
        android:id="@+id/circulating_supply_text"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginVertical="7dp"
        android:text="@string/circulating_supply"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="@+id/max_supply_text"
        app:layout_constraintTop_toBottomOf="@+id/max_supply_text" />

    <TextView
        android:id="@+id/circulating_supply"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="@+id/circulating_supply_text"
        app:layout_constraintStart_toEndOf="@+id/circulating_supply_text"
        tools:text="18733143" />

    <TextView
        android:id="@+id/total_supply_text"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginVertical="7dp"
        android:text="@string/total_supply"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="@+id/circulating_supply_text"
        app:layout_constraintTop_toBottomOf="@+id/circulating_supply_text" />

    <TextView
        android:id="@+id/total_supply"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="@+id/total_supply_text"
        app:layout_constraintStart_toEndOf="@+id/total_supply_text"
        tools:text="18733143" />

    <TextView
        android:id="@+id/last_updated_text"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginVertical="7dp"
        android:text="@string/Last_updated"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="@+id/total_supply_text"
        app:layout_constraintTop_toBottomOf="@+id/total_supply_text" />

    <TextView
        android:id="@+id/last_updated"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="@+id/last_updated_text"
        app:layout_constraintStart_toEndOf="@+id/last_updated_text"
        tools:text="2021-06-12T16:47:02.000Z" />

    <ImageView
        android:id="@+id/image_crypto_graph"
        android:layout_width="0dp"
        android:layout_height="200dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/last_updated" />

</androidx.constraintlayout.widget.ConstraintLayout>